# wp-engine

./: .gitignore  AGENTS.md  Cargo.toml  benchmark_strings.md  clean.sh
_gal/: Cargo_tpl.toml  adm.gxl  head.gxl  work.gxl
crates/: README.md
crates/orion_exp/: Cargo.toml
crates/orion_exp/benches/: or_we_bench.rs
crates/orion_exp/src/: README.md  lib.rs  traits.rs
crates/orion_exp/src/builder/: mod.rs
crates/orion_exp/src/core/: compare.rs  logic.rs  mod.rs
crates/orion_exp/src/display/: mod.rs
crates/orion_exp/src/evaluator/: cmp_pri.rs  mod.rs
crates/orion_exp/src/operator/: mod.rs  symbols.rs
crates/wp-cli-core/: Cargo.toml
crates/wp-cli-core/src/: lib.rs
crates/wp-cli-core/src/connectors/: sinks.rs  sources.rs
crates/wp-cli-core/src/data/: clean.rs
crates/wp-cli-core/src/knowdb/: mod.rs
crates/wp-cli-core/src/obs/: mod.rs  stat.rs  validate.rs
crates/wp-cli-utils/: Cargo.toml
crates/wp-cli-utils/src/: banner.rs  fsutils.rs  lib.rs  scan.rs  sources.rs  stats.rs  types.rs  validate.rs
crates/wp-cli-utils/src/pretty/: helpers.rs  mod.rs  sinks.rs  sources.rs  validate.rs
crates/wp-data-utils/: Cargo.toml
crates/wp-data-utils/src/: cache.rs  compare.rs  conditions.rs  lib.rs  tags.rs  traits.rs
crates/wp-knowledge/: Cargo.toml
crates/wp-knowledge/benches/: read_bench.rs
crates/wp-knowledge/data/: temp_db.toml
crates/wp-knowledge/knowdb/: knowdb.toml
crates/wp-knowledge/knowdb/address/: create.sql  data.csv  insert.sql
crates/wp-knowledge/knowdb/example/: create.sql  data.csv  insert.sql
crates/wp-knowledge/knowdb/zone/: create.sql  data.scv  insert.sql
crates/wp-knowledge/src/: cache_util.rs  facade.rs  lib.rs  loader.rs  sqlite_ext.rs
crates/wp-knowledge/src/mem/: memdb.rs  mod.rs  params.rs  query_util.rs  stub.rs  thread_clone.rs
crates/wp-knowledge/src/mem/dict/: event_cat_level.csv
crates/wp-knowledge/tests/: knowdb_v2.rs  udf_integration.rs
crates/wp-lang/: Cargo.toml
crates/wp-lang/benches/: nginx_10k.rs  string_comparison.rs  wpl_bench.rs  wpl_pipe_bench.rs
crates/wp-lang/src/: checker.rs  lib.rs  macro_def.rs  pkg.rs  precompile.rs  setting.rs  traits.rs  util.rs
crates/wp-lang/src/ast/: ann_func.rs  code.rs  fld_fmt.rs  group.rs  mod.rs
crates/wp-lang/src/ast/debug/: mod.rs
crates/wp-lang/src/ast/field/: format.rs  mod.rs  name_cache.rs  types.rs
crates/wp-lang/src/ast/package/: mod.rs
crates/wp-lang/src/ast/processor/: function.rs  mod.rs  pipe.rs
crates/wp-lang/src/ast/rule/: meta.rs  types.rs
crates/wp-lang/src/ast/syntax/: mod.rs  separator.rs  tag.rs  wpl_sep.rs
crates/wp-lang/src/eval/: desc.rs  err_test.rs  mod.rs  mod_test.rs
crates/wp-lang/src/eval/builtins/: base64.rs  hex.rs  mod.rs  pipe_fun.rs  quotation.rs  registry.rs
crates/wp-lang/src/eval/runtime/: field.rs  field_pipe.rs  mod.rs  pipe_exec.rs  subunit.rs  vm_unit.rs
crates/wp-lang/src/eval/runtime/group/: alt.rs  mod.rs  opt.rs  order.rs  some_of.rs  traits.rs
crates/wp-lang/src/eval/value/: data_type.rs  error.rs  field_parse.rs  generate.rs  mechanism.rs  mod.rs  parse_def.rs  test_utils.rs
crates/wp-lang/src/eval/value/parser/: auto.rs  factory.rs  mod.rs  prelude.rs
crates/wp-lang/src/eval/value/parser/base/: bool.rs  chars.rs  digit.rs  hex.rs  ignore.rs  mod.rs  symbol.rs
crates/wp-lang/src/eval/value/parser/compute/: device.rs
crates/wp-lang/src/eval/value/parser/network/: domain.rs  email.rs  http.rs  mod.rs  net.rs  url.rs
crates/wp-lang/src/eval/value/parser/physical/: foundation.rs  id_card.rs  mobile_phone.rs  mod.rs
crates/wp-lang/src/eval/value/parser/physical/time/: clf.rs  common.rs  mod.rs  rfc.rs  timestamp.rs
crates/wp-lang/src/eval/value/parser/protocol/: array.rs  base64.rs  json.rs  json_exact.rs  json_impl.rs  keyval.rs  mod.rs  proto_text.rs
crates/wp-lang/src/generator/: fmt.rs  mod.rs  rule.rs
crates/wp-lang/src/parser/: constants.rs  datatype.rs  err_report.rs  error.rs  mod.rs  parse_code.rs  string.rs  utils.rs  wpl_anno.rs  wpl_field.rs  wpl_fun.rs  wpl_group.rs  wpl_pkg.rs  wpl_rule.rs
crates/wp-lang/src/types/: mod.rs  wild_map.rs
crates/wp-parser/: BENCHMARKS.md  Cargo.toml  IMPROVEMENTS.md  NAMING_GUIDE.md  NAMING_QUICK_REF.md  PERFORMANCE.md
crates/wp-parser/benches/: parser_bench.rs  quick_bench.rs
crates/wp-parser/src/: atom.rs  lib.rs
crates/wp-parser/src/fun/: parser.rs
crates/wp-proj/: Cargo.toml
crates/wp-proj/src/: consts.rs  lib.rs  res.rs  test_utils.rs  types.rs
crates/wp-proj/src/connectors/: core.rs  defaults.rs  lint.rs  mod.rs  paths.rs  templates.rs  types.rs
crates/wp-proj/src/example/conf/: wparse.toml  wpgen.toml
crates/wp-proj/src/example/oml/: nginx.oml
crates/wp-proj/src/example/sinks/: defaults.toml
crates/wp-proj/src/example/sinks/business.d/: demo.toml
crates/wp-proj/src/example/sinks/infra.d/: default.toml  error.toml  miss.toml  monitor.toml  residue.toml
crates/wp-proj/src/example/sources/: wpsrc.toml
crates/wp-proj/src/example/wpl/nginx/: parse.wpl
crates/wp-proj/src/models/: knowledge.rs  mod.rs  oml.rs  wpl.rs
crates/wp-proj/src/project/: init.rs  mod.rs  tests.rs  warp.rs
crates/wp-proj/src/project/check/: check_types.rs  mod.rs
crates/wp-proj/src/project/checker/: mod.rs  options.rs  report.rs
crates/wp-proj/src/sinks/: clean.rs  mod.rs  sink.rs  stat.rs  validate.rs  view.rs
crates/wp-proj/src/sources/: core.rs  mod.rs  source_builder.rs  stat.rs
crates/wp-proj/src/utils/: config_path.rs  error_handler.rs  log_handler.rs  mod.rs
crates/wp-proj/src/wparse/: mod.rs  samples.rs
crates/wp-proj/src/wpgen/: core.rs  manage.rs  mod.rs
docs/: Makefile  README.md  SUMMARY.md  cli_layers.md  generate_summary.py  plugin-development.md  smolstr_migration_complete.md
issue/: prometheus_syslog.md
src/: DEVELOPER_GUIDE.md  debug.rs  engine_flags.rs  lib.rs  test_support.rs  types.rs  wp_ctrl_enterprise.rs
tasks/: tcp_source_worker_plan.md
tests/: actor_workflows.rs  error_handling.rs  parser_functionality.rs  source_config.rs  source_integration.rs  sources_unified_config.rs  (+2 more)
(+555 files in other folders)
