[package]
name = "orion_exp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive-getters = { workspace = true }
wildmatch = { workspace = true }
ipnet = { workspace = true }
chrono = { workspace = true }
arcstr = { workspace = true }


[features]
default = ["we_precompile"]
we_precompile = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "or_we_bench"
harness = false
