[package]
name = "wp-cli-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wp_cli_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
orion-error = { workspace = true }
wp-conf = { path = "../wp-config", package = "wp-config" }
wpcnt_lib = { package = "wp-cli-utils", path = "../wp-cli-utils" }
orion_conf = { workspace = true, features = ["toml"]}
wp-knowledge = { path = "../wp-knowledge", package = "wp-knowledge" }
serde = { workspace = true }
toml = { workspace = true }
