[package]
name = "wp-cli-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
wp_model_core = { package = "wp-data-utils", path = "../wp-data-utils" }
wp-data-fmt= { workspace=true }
wp_conf = { package = "wp-config", path = "../wp-config" }
chrono = { workspace = true }
comfy-table = { workspace = true }

[lib]
name = "wp_cli_utils"
