[package]
name = "wp-knowledge"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wp_knowledge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
orion_overload = { path = "../orion_overload" }
orion-error= { workspace = true }
wp-error = { workspace = true }
wp-log = { workspace = true }
wp-specs = { workspace = true }
wp_model_core = { workspace = true }
wp_data_model = { workspace = true }
wp-data-fmt= { workspace=true }
#wpl = { package = "wp-lang", path = "../wp-lang", default-features = false }
log = { workspace = true }
anyhow = { workspace = true }
wildmatch = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true, features = ["json"] }
strfmt = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }
strum_macros = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true }
r2d2_sqlite = { workspace = true }
enum_dispatch = { workspace = true }
lazy_static = { workspace = true }
csv = { workspace = true }
derive-getters = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_derive = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
criterion = { workspace = true }
rand_distr = { workspace = true }

[[bench]]
name = "read_bench"
harness = false

#[target.'cfg(windows)'.dependencies]
#rusqlite = { version = "=0.35", features = ["bundled", "backup", "functions"] }
